--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+# Core document processing
 pdfplumber>=0.9.0
 python-docx>=0.8.11
 pandas>=2.0.0
 numpy>=1.24.0
+
+# Visualization and reporting
 plotly>=5.15.0
 pathlib2>=2.3.7
+
+# API integration dependencies (v1.1.0)
+requests>=2.31.0
+fuzzywuzzy>=0.18.0
+python-levenshtein>=0.27.0
+
+# Enhanced functionality
+urllib3>=2.0.0
+certifi>=2023.0.0
